feat(ui): implement neubrutalist design theme and update web interface
- Add new neubrutalist.css stylesheet with soothing palette and box-shadow effects
- Update all HTML templates (index, dashboard, login, register, results, admin_dashboard) to include new CSS and improve layout
- Modify existing CSS files (style.css, style-RES.css) for better responsiveness and theme integration
- Add new stock data CSV files (ATVI.csv, T.csv, tsla.csv) for expanded dataset
- Update draft-report.md with new diagrams and content
- Refresh chart images (ARIMA.png, LR.png, LSTM.png, SA.png, Trends.png) with latest data visualizations

BREAKING CHANGE: Updated CSS classes and HTML structure may require review for custom integrations

--- a/static/style-RES.css
+++ b/static/style-RES.css
@@ -12,24 +12,6 @@
 @import url(helper.css);
 @import url(spinners.css);
 @import url(animate.css);
-<head>
-  <link rel="import" href="{{ url_for('static', filename='font-awesome.min.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='bootstrap-RES.min.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='simple-line-icons.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='weather-icons.min.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='linea.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='helper.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='spinners.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='animate.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='cryptocoins.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='cryptocoins-colors.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='themify-icons.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='flag-icon.min.css') }}">
-  <link rel="import" href="{{ url_for('static', filename='materialdesignicons.min.css)') }}">
-
-
-
-</head>
 /*
 Style   : CoinDash CSS
 Version : 1.0
@@ -1832,9 +1814,9 @@ textarea {
     stroke-linejoin: round;
     stroke-linecap: round;
     stroke-dasharray: 500%;
-    stroke-dasharray: 0 /;
+    stroke-dasharray: 0;
     /* fixes IE prob */
-    stroke-dashoffset: 0 /;
+    stroke-dashoffset: 0;
     /* fixes IE prob */
     -webkit-animation: am-draw 40s;
     animation: am-draw 40s;
