--- a/static/style.css
+++ b/static/style.css
@@ -120,8 +120,6 @@ ul, ol {
 }
 ul, ol {
 	padding: 0;
-	webkit-padding: 0;
-	moz-padding: 0;
 }
 clients-name .radius {
 	border-radius: 50%;
@@ -489,55 +487,13 @@ img {
 	font-size: 18px;
 	text-shadow: none;
 	text-decoration: none;
- -webkit-transition: all .6s ease 0s;
- transition: all .6s ease 0s;
+	-webkit-transition: all .6s ease 0s;
+	transition: all .6s ease 0s;
 	text-transform: uppercase;
 	border-radius: 0px;
- max-width: 100#;
+	max-width: 100%;
 	width: 225px;
 	margin-top: 22px;
-}
-.btn-download-send:hover {
-	background-color: #fff;
-	border: none;
-	color: #333;
-	text-decoration: none;
-	display: inline-block;
-}
-.btn-download-small i {
-	color: #fff;
-	font-size: 22px;
-}
-.btn-download-small:hover i {
-	color: #333;
-}
-.btn-download-small {
-	display: inline-block;
-	border: 1px solid #ffaa00;
-	padding: 12px 30px;
-	background: #ffaa00;
-	color: #ffffff;
-	font-size: 16px;
-	font-weight: 600;
-	text-shadow: none;
-	border-radius: 0px;
-	text-decoration: none;
- -webkit-transition: all .6s ease 0s;
- transition: all .6s ease 0s;
-	text-transform: uppercase;
-	max-width: 100%;
-	width: 190px;
-	margin-top: 22px;
-}
-.btn-download-small:hover {
-	background-color: transparent;
-	border: 1px solid #ffaa00;
-	color: #333;
-	text-decoration: none;
-	display: inline-block;
-}
-.btn-download-small:focus {
-	color: #ffffff;
 }
 /*------------------------------------------*/
 /* 
@@ -827,11 +783,12 @@ canvas {
 	border:0px solid #fff;
 	line-height:65px;
 	border-width:2px 1px 2px 1px;
-	border-color:#ffaa00 #ff #fff #fff;
+	border-color:#ffaa00 #fff #fff #fff;
 }
- @media (max-width: 480px) {
- .hero .hero-content h1
-} {
+@media (max-width: 480px) {
+	.hero .hero-content h1 {
+		/* responsive tweaks for small screens (kept empty intentionally) */
+	}
 }
 .hero .hero-content h2, .video-banner h2 {
 	font-size: 4.4rem;
@@ -857,9 +814,10 @@ canvas {
 .hero .hero-content .group-button a {
 	margin: 0 10px;
 }
- @media (max-width: 380px) {
- .hero .hero-content .group-button a
-} {
+@media (max-width: 380px) {
+	.hero .hero-content .group-button a {
+		/* placeholder for very small screens */
+	}
 }
 .hero .hero-content .button-bg {
 	background: #fc575e none repeat scroll 0 0;
@@ -883,9 +841,10 @@ canvas {
 	padding: 10px 30px;
 	text-transform: uppercase;
 }
- @media (max-width: 480px) {
- .hero .hero-content .button
-} {
+@media (max-width: 480px) {
+	.hero .hero-content .button {
+		/* placeholder for button tweaks on small screens */
+	}
 }
 .hero .hero-content .button:focus, .hero .hero-content .button:hover {
 	border-color: #fc575e;
@@ -1058,9 +1017,10 @@ canvas {
 	width: 100%;
 	z-index: 5;
 }
- @media (max-width: 480px) {
- .video-banner h1
-} {
+@media (max-width: 480px) {
+	.video-banner h1 {
+		/* placeholder for video banner heading on small screens */
+	}
 }
 .relative, .video-banner {
 	position: relative;
@@ -1075,9 +1035,10 @@ canvas {
 	width:100%;
 	z-index: 2;
 }
- @media (max-width: 767px) {
- .content-v
-} {
+@media (max-width: 767px) {
+	.content-v {
+		/* placeholder for content-v on tablets */
+	}
 }
 /*------------------------------------------*/
 /* 
@@ -2226,43 +2187,34 @@ ul.pagination li a.next:hover {
  transition: all .5s;
 }
  @media(max-width: 500px) {
- ul.pagination li a.prev
-}
-ul.pagination li a.next {
+ ul.pagination li a.prev,
+ ul.pagination li a.next {
 	margin-left: 15px;
-}
-{
+ }
 }
  @media(max-width: 420px) {
- ul.pagination li a
-}
-ul.pagination li a.prev {
+ ul.pagination li a.prev {
 	padding: 7px 20px;
-}
-ul.pagination li a.next {
+ }
+ ul.pagination li a.next {
 	padding: 5px 15px;
-}
-{
+ }
 }
  @media(max-width: 350px) {
- ul.pagination li a.prev
-}
-ul.pagination li a.next {
+ ul.pagination li a.prev,
+ ul.pagination li a.next {
 	margin-left: 50px;
-}
-{
+ }
 }
  @media(max-width: 330px) {
- ul.pagination li a.prev
-}
-ul.pagination li a.next {
+ ul.pagination li a.prev,
+ ul.pagination li a.next {
 	font-size: 10px;
 	padding: 7px 20px;
+ }
 }
 ul.pagination li a {
 	font-size: 10px;
-}
-{
 }
 /*-----------------------------------------*/
 /* 
@@ -2274,7 +2226,7 @@ ul.pagination li a {
 	padding: 90px 0 90px 0;
 }
 .bg-newsletter {
-	background: url(desk.jpg) repeat fixed 0 0 / cover
+	background: url(desk.jpg) repeat fixed 0 0 / cover;
 }
 .newsletter > h3 {
 	margin-bottom: 23px;
@@ -5334,7 +5286,7 @@ a.accordion-toggle i {
 	border-radius: 0 30% 0 0;
 }
 #contac-innert .contact-inner:hover > i.fa {
-	color: ##12212f;
+	color: #12212f;
 	background: #000000;
 	transition: all 0.3s ease 0s;
 }
