--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JKS - Portfolio Dashboard</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo-2.png') }}">
+    <!-- Google Fonts: Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link href="{{ url_for('static', filename='bootstrap.min-RES.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='helper.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='style-RES.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='neubrutalist.css') }}" rel="stylesheet">
 </head>
 <body class="header-fix fix-sidebar">
 <div id="main-wrapper">
