--- a/templates/register.html
+++ b/templates/register.html
@@ -6,9 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JKS - Register</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo-2.png') }}">
+    <!-- Google Fonts: Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link href="{{ url_for('static', filename='bootstrap.min-RES.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='helper.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='style-RES.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='neubrutalist.css') }}" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 400;
+        }
+        
+        h1, h2, h3, h4, h5, h6, .btn {
+            font-weight: 700;
+        }
+        
+        .nav-label a {
+            font-weight: 600;
+        }
+        
+        .text-primary {
+            font-weight: 600;
+        }
+        
+        label {
+            font-weight: 600;
+        }
+        
+        .btn-primary {
+            font-weight: 700;
+        }
+        
+        small, .small {
+            font-weight: 300;
+        }
+    </style>
 </head>
 <body class="header-fix fix-sidebar">
 <div id="main-wrapper">
@@ -16,10 +51,9 @@
         <div class="scroll-sidebar">
             <nav class="sidebar-nav">
                 <ul id="sidebar-menu">
-                    <li class="nav-devider"></li>
-                    <br>
                     <li class="nav-label"><a href="{{ url_for('index') }}">HOME</a></li>
                     <li class="nav-label"><a href="{{ url_for('index') }}#home">PREDICT THE FUTURE</a></li>
+                    <li style="margin-bottom: 20px;"></li>
                     <li class="nav-label"><a href="{{ url_for('dashboard') }}">DASHBOARD</a></li>
                 </ul>
             </nav>
@@ -31,8 +65,8 @@
                 <h3 class="text-primary">Create a new account</h3>
             </div>
         </div>
-        <div class="container-fluid">
-            <div class="row justify-content-center">
+        <div class="container-fluid" style="height: calc(100vh - 100px); display: flex; align-items: flex-end;">
+            <div class="row justify-content-center" style="width: 100%; margin-bottom: 50px;">
                 <div class="col-12 col-md-6 col-lg-4">
                     {% with messages = get_flashed_messages(with_categories=true) %}
                     {% if messages %}
