--- a/templates/results.html
+++ b/templates/results.html
@@ -12,6 +12,11 @@
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo-2.png') }}">
     <title>JKS</title>
 
+    <!-- Google Fonts: Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <link href="{{ url_for('static', filename='owl.carousel.min.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='owl.theme.default.min.css') }}" rel="stylesheet" />
     <!-- Bootstrap Core CSS -->
@@ -19,6 +24,7 @@
     <!-- Custom CSS -->
     <link href="{{ url_for('static', filename='helper.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='style-RES.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='neubrutalist.css') }}" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:** -->
     <!--[if lt IE 9]>
@@ -53,7 +59,7 @@
                     <li class="nav-devider"></li>
                     <br>
                     <li class="nav-label"><a href="{{ url_for('index') }}">HOME</a></li>
-                    <li class="nav-label"><a href="http://127.0.0.1:5000">PREDICT THE FUTURE</a></li>
+                    <li class="nav-label"><a href="{{ url_for('index') }}#home">PREDICTION STUDIO</a></li>
                     <li class="nav-label"><a href="{{ url_for('dashboard') }}">DASHBOARD</a></li>
                 </ul>
             </nav>
@@ -68,7 +74,8 @@
         <!-- Bread crumb -->
         <div class="row page-titles">
             <div class="col-md-5 align-self-center">
-                <h3 class="text-primary">TODAY'S {{quote}} STOCK DATA</h3>
+                <h3 class="text-primary">{{quote}} overview</h3>
+                <small class="text-muted">Realtime snapshot, model forecasts, and recent sentiment in one calm view.</small>
             </div>
             <div class="col-md-7 align-self-center">
             </div>
@@ -77,7 +84,7 @@
 
         <!-- Container fluid  -->
         <div class="container-fluid">
-            <!-- Key stats -->
+            <!-- Price snapshot -->
             <div class="row">
                 <div class="col-12 col-sm-6 col-lg-3 mb-4">
                     <div class="card bg-primary p-20 h-100">
@@ -133,12 +140,12 @@
                 </div>
             </div>
 
-            <!-- Chart row -->
+            <!-- Model performance -->
             <div class="row">
                 <div class="col-12 col-lg-6 mb-4">
                     <div class="card h-100">
                         <div class="card-title">
-                            <h4>RECENT TRENDS IN {{quote}} STOCK PRICES</h4>
+                            <h4>Price history for {{quote}}</h4>
                         </div>
                         <div class="sales-chart text-center">
                             <img class="img-fluid" src="{{url_for('static', filename='Trends.png')}}" alt="Price Trends">
@@ -148,7 +155,7 @@
                 <div class="col-12 col-lg-6 mb-4">
                     <div class="card h-100">
                         <div class="card-title">
-                            <h4>ARIMA MODEL ACCURACY</h4>
+                            <h4>ARIMA model accuracy</h4>
                         </div>
                         <div class="sales-chart text-center">
                             <img class="img-fluid" src="{{url_for('static', filename='ARIMA.png')}}" alt="ARIMA Accuracy">
@@ -158,7 +165,7 @@
                 <div class="col-12 col-lg-6 mb-4">
                     <div class="card h-100">
                         <div class="card-title">
-                            <h4>LSTM MODEL ACCURACY</h4>
+                            <h4>LSTM model accuracy</h4>
                         </div>
                         <div class="team-chart text-center">
                             <img class="img-fluid" src="{{url_for('static', filename='LSTM.png')}}" alt="LSTM Accuracy">
@@ -168,7 +175,7 @@
                 <div class="col-12 col-lg-6 mb-4">
                     <div class="card h-100">
                         <div class="card-title">
-                            <h4>LINEAR REGRESSION MODEL ACCURACY</h4>
+                            <h4>Linear regression accuracy</h4>
                         </div>
                         <div class="team-chart text-center">
                             <img class="img-fluid" src="{{url_for('static', filename='LR.png')}}" alt="LR Accuracy">
@@ -177,7 +184,7 @@
                 </div>
             </div>
 
-            <!-- Prediction row -->
+            <!-- Tomorrow's predictions -->
             <div class="row">
                 <div class="col-12 col-lg-4 mb-4">
                     <div class="card bg-success p-20 h-100">
@@ -187,7 +194,7 @@
                             </div>
                             <div class="media-body media-text-right">
                                 <h2 class="color-white text-white">{{arima_pred}}</h2>
-                                <p class="m-b-0 text-white">TOMORROW'S {{quote}} CLOSE (ARIMA)</p>
+                                <p class="m-b-0 text-white">Tomorrow's {{quote}} close (ARIMA)</p>
                             </div>
                         </div>
                     </div>
@@ -200,7 +207,7 @@
                             </div>
                             <div class="media-body media-text-right">
                                 <h2 class="color-white text-white">{{lstm_pred}}</h2>
-                                <p class="m-b-0 text-white">TOMORROW'S {{quote}} CLOSE (LSTM)</p>
+                                <p class="m-b-0 text-white">Tomorrow's {{quote}} close (LSTM)</p>
                             </div>
                         </div>
                     </div>
@@ -213,14 +220,14 @@
                             </div>
                             <div class="media-body media-text-right">
                                 <h2 class="color-white text-white">{{lr_pred}}</h2>
-                                <p class="m-b-0 text-white">TOMORROW'S {{quote}} CLOSE (LR)</p>
+                                <p class="m-b-0 text-white">Tomorrow's {{quote}} close (LR)</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Error row -->
+            <!-- Model error metrics -->
             <div class="row">
                 <div class="col-12 col-lg-4 mb-4">
                     <div class="card bg-primary p-20 h-100">
@@ -256,19 +263,19 @@
                             </div>
                             <div class="media-body media-text-right">
                                 <h2 class="color-white text-white">{{error_lr}}</h2>
-                                <p class="m-b-0 text-white">LINEAR REGRESSION RMSE</p>
+                                <p class="m-b-0 text-white">Linear regression RMSE</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- News + sentiment + forecast -->
+            <!-- News + sentiment + 7-day trajectory -->
             <div class="row">
                 <div class="col-12 mb-4">
                     <div class="card h-100">
                         <div class="card-title">
-                            <h4>RECENT NEWS ABOUT {{quote}}</h4>
+                            <h4>Recent news about {{quote}}</h4>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -303,7 +310,7 @@
                 <div class="col-12 col-lg-6 mb-4">
                     <div class="card h-100">
                         <div class="card-title">
-                            <h4>SENTIMENT ANALYSIS FOR {{quote}}</h4>
+                            <h4>Sentiment analysis for {{quote}}</h4>
                         </div>
                         <div class="sales-chart text-center">
                             <img class="img-fluid" src="{{url_for('static', filename='SA.png')}}"
@@ -314,7 +321,7 @@
                 <div class="col-12 col-lg-6 mb-4">
                     <div class="card h-100">
                         <div class="card-title">
-                            <h4>PREDICTED {{quote}} PRICE FOR THE NEXT 7 DAYS</h4>
+                            <h4>Predicted {{quote}} price for the next 7 days</h4>
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
@@ -365,7 +372,7 @@
                             </div>
                             <div class="media-body media-text-right">
                                 <h2 class="color-white text-white">{{sentiment_pol}}</h2>
-                                <p class="m-b-0 text-white">OVERALL SENTIMENT POLARITY</p>
+                                <p class="m-b-0 text-white">Overall sentiment polarity</p>
                             </div>
                         </div>
                     </div>
@@ -378,9 +385,9 @@
                             </div>
                             <div class="media-body media-text-right">
                                 <h2 class="color-white text-white" style="text-align: left;">According to the ML
-                                    Predictions &amp; Sentiment Analysis, a {{idea}} in {{quote}} stock is expected =>
+                                    predictions and sentiment analysis, a {{idea}} in {{quote}} stock is expected ⇒
                                     {{decision}}</h2>
-                                <p class="m-b-0 text-white">RECOMMENDATION</p>
+                                <p class="m-b-0 text-white">Recommendation</p>
                             </div>
                         </div>
                     </div>
