--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,6 +43,24 @@
                 </div>
             </div>
             <div class="container-fluid">
+                <!-- Flash Messages -->
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <div class="row">
+                    <div class="col-12">
+                        {% for category, message in messages %}
+                        <div class="alert alert-{{ 'danger' if category == 'balance_error' else (category if category != 'message' else 'info') }} alert-dismissible fade show"
+                            role="alert">
+                            {{ message }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+                {% endif %}
+                {% endwith %}
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-3 mb-4">
                         <div class="card bg-primary p-20 h-100">
@@ -293,13 +311,17 @@
             </div>
         </div>
     </div>
-    <script src="{{url_for('static', filename='jquery-RES.min.js ')}}"></script>
+    </div>
+
+
+    <script src="{{url_for('static', filename='jquery-RES.min.js')}}"></script>
     <script src="{{url_for('static', filename='popper.min.js')}}"></script>
     <script src="{{url_for('static', filename='bootstrap-RES.min.js')}}"></script>
     <script src="{{url_for('static', filename='jquery.slimscroll.js')}}"></script>
     <script src="{{url_for('static', filename='sidebarmenu.js')}}"></script>
     <script src="{{url_for('static', filename='sticky-kit.min.js')}}"></script>
     <script src="{{url_for('static', filename='custom.min.js')}}"></script>
+
 </body>
 
 </html>
