--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -62,7 +62,7 @@
                 {% endif %}
                 {% endwith %}
                 <div class="row">
-                    <div class="col-12 col-sm-6 col-lg-3 mb-4">
+                    <div class="col-12 col-sm-6 col-md-4 mb-4">
                         <div class="card bg-primary p-20 h-100">
                             <div class="media widget-ten">
                                 <div class="media-left meida media-middle">
@@ -75,41 +75,28 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-4">
+                    <div class="col-12 col-sm-6 col-md-4 mb-4">
                         <div class="card bg-success p-20 h-100">
-                            <div class="media widget-ten">
-                                <div class="media-left meida media-middle">
-                                    <span><i class="ti-pie-chart f-s-40"></i></span>
-                                </div>
-                                <div class="media-body media-text-right">
-                                    <h2 class="text-white">{{ '%.2f'|format(total_invested) }}</h2>
-                                    <p class="m-b-0 text-white">TOTAL INVESTED</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <div class="card bg-warning p-20 h-100">
                             <div class="media widget-ten">
                                 <div class="media-left meida media-middle">
                                     <span><i class="ti-bar-chart f-s-40"></i></span>
                                 </div>
                                 <div class="media-body media-text-right">
-                                    <h2 class="text-white">{{ '%.2f'|format(total_current) }}</h2>
-                                    <p class="m-b-0 text-white">CURRENT VALUE</p>
+                                    <h2 class="text-white">{{ '%.2f'|format(current_portfolio_value) }}</h2>
+                                    <p class="m-b-0 text-white">CURRENT PORTFOLIO VALUE</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6 col-lg-3 mb-4">
-                        <div class="card bg-danger p-20 h-100">
+                    <div class="col-12 col-sm-6 col-md-4 mb-4">
+                        <div class="card bg-warning p-20 h-100">
                             <div class="media widget-ten">
                                 <div class="media-left meida media-middle">
-                                    <span><i class="ti-stats-up f-s-40"></i></span>
+                                    <span><i class="ti-money f-s-40"></i></span>
                                 </div>
                                 <div class="media-body media-text-right">
-                                    <h2 class="text-white">{{ '%.2f'|format(total_current - total_invested) }}</h2>
-                                    <p class="m-b-0 text-white">UNREALIZED P/L</p>
+                                    <h2 class="text-white">{{ '%.2f'|format(realized_profit) }}</h2>
+                                    <p class="m-b-0 text-white">REALIZED PROFIT</p>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +158,7 @@
                                         <tr>
                                             <th>Symbol</th>
                                             <th>Quantity</th>
-                                            <th>Average Buy Price</th>
+                                            <th>Current Price</th>
                                             <th>Actions</th>
                                         </tr>
                                     </thead>
@@ -180,7 +167,7 @@
                                         <tr>
                                             <td>{{ item.company.symbol }}</td>
                                             <td>{{ item.quantity }}</td>
-                                            <td>{{ '%.2f'|format(item.average_buy_price) }}</td>
+                                            <td>{{ '%.2f'|format(item.current_price) }}</td>
                                             <td>
                                                 <form method="POST" action="{{ url_for('trade_buy') }}"
                                                     class="d-inline">
